--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
   "name": "chumchum-backend",
   "version": "1.0.0",
-  "description": "Backend for Chum Chum",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   }
-}
-"scripts": {
-  "start": "node server.js"
 }
